Fixes to EventScheduler and FSS